# py-impose

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
debug/: debug_cli.py  debug_ui.py  test_pdf_processor.py
debug/Files/Inputs/: test_input.docx
docs/: PDFProcessor.md
src/py_impose/: __init__.py  file_loader.py  page_bleed_box.py  page_imposer.py  page_resizer.py  page_tiler.py  paper_types.py  pdf_exporter.py  pdf_loader.py  pdf_processor.py
src/py_impose/types/: __init__.py  bindung_types.py  page_types.py  paper_types.py
